# bazel-demo-golang

./: BUILD.bazel  WORKSPACE  demo  go.mod  go.sum
backend/: BUILD.bazel  main.go
client/: BUILD.bazel  main.go
common/: BUILD.bazel  common.go
proto/calculator/: BUILD.bazel  calculator.proto
proto/calculator/tmp/: BUILD.bazel
