load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:prefix github.com/ekkinox/bazel-demo
gazelle(
    name = "gazelle",
    args = [
        "-build_tags=integration",
        "-external=vendored",
    ],
    gazelle = "//:gazelle_binary",
)

# TODO: enhance this to have dir automatically populated.
gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)
