load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["main.go"],
    importpath = "github.com/ekkinox/bazel-demo/backend",
    visibility = ["//visibility:private"],
    deps = ["//vendor/google.golang.org/grpc"],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)
