load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc//grpc-gateway:defs.bzl", "gateway_grpc_library")
load("@rules_proto_grpc//grpc-gateway:defs.bzl", "gateway_openapiv2_compile")

proto_library(
    name = "calculator_proto",
    srcs = ["calculator.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "calculator_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ekkinox/bazel-demo/proto/calculator",
    proto = ":calculator_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "calculator",
    embed = [":calculator_go_proto"],
    importpath = "github.com/ekkinox/bazel-demo/proto/calculator",
    visibility = ["//visibility:public"],
)

gateway_grpc_library(
    name = "calculator_gateway_library",
    importpath = "github.com/ekkinox/bazel-demo/proto/calculator",
    protos = [":calculator_proto"],
)

gateway_openapiv2_compile(
    name = "calculator_gateway_openapi",
    protos = [":calculator_proto"],
)
